refactor update plugin system